# treebag-rs

./: .gitignore  Cargo.toml  LICENSE  build.rs
apps/treebag-gui/: Cargo.toml
apps/treebag-gui/src/: component_graph.rs  main.rs  node.rs  worksheet.rs
apps/treebag-gui/src/node/: invisible.rs
apps/treebag-tui/: Cargo.toml
apps/treebag-tui/src/: error.rs  main.rs  meta_command.rs  repl.rs  treebag_command.rs
assets/linkExamples/: display
assets/linkExamples/barnsley/: algebra%%  grammar  grammar%%  grammar.1  grammar.2  grammar.2%  grammar.2%%  worksheet%
assets/linkExamples/koch-curve/: chain-code  curve%  curve.1%%  curve.2%  worksheet%
assets/linkExamples/plant/: plant%  plant%%  plant.2  plant.2%%  turtle  worksheet%%
assets/linkExamples/symmetry/: algebra%  grammar%  worksheet%%
assets/linkExamples/ww/: algebra%%  grammar  grammar%%  worksheet%
libs/treebag-app/: Cargo.toml
libs/treebag-app/src/: component_graph.rs  lib.rs  worksheet.rs
libs/treebag-app/src/node_parser/: mod.rs
libs/treebag-app/src/nodes/: mod.rs
libs/treebag-generators/: Cargo.toml
libs/treebag-generators/src/: lib.rs  tree_generator.rs  tree_grammar.rs  tree_transducer.rs
libs/treebag-generators/src/tree_grammar/: bst_grammar.rs  regular.rs
libs/treebag-terms/: Cargo.toml  symbol.rs
libs/treebag-terms/src/: lib.rs  signature.rs  symbol.rs  term.rs
libs/treebag-terms/src/signatures/: finite_signature.rs  mod.rs
libs/treebag-terms/src/symbol/: ranked.rs  (+2 more)
src/: main.rs
ui/: worksheet.slint
useless/: Cargo.toml
useless/src/: lib.rs  trivial_transducer1.rs
