[package]
name = "useless"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
treebag-generators = { version = "0.1.0", path = "../libs/treebag-generators" }
treebag-terms = { version = "0.1.0", path = "../libs/treebag-terms" }
